--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
 altair==5.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
 attrs==23.2.0
-bcrypt==4.1.2
 blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.11.17
-cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
-cryptography==42.0.0
-extra-streamlit-components==0.1.60
 gitdb==4.0.11
 GitPython==3.1.41
 idna==3.6
@@ -24,42 +18,30 @@ mdurl==0.1.2
 numpy==1.26.3
 packaging==23.2
 pandas==2.2.0
-patsy==0.5.6
 pillow==10.2.0
 plotly==5.18.0
-plotly-express==0.4.1
 protobuf==4.25.2
 pyarrow==15.0.0
-pycparser==2.21
 pydeck==0.8.1b0
 Pygments==2.17.2
-PyJWT==2.8.0
 python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-referencing==0.32.1
+pytz==2023.4
+referencing==0.33.0
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.17.1
-scipy==1.12.0
 six==1.16.0
 smmap==5.0.1
-statsmodels==0.14.1
 streamlit==1.30.0
-streamlit-authenticator==0.2.4
-streamlit-cookies-manager==0.2.0
-streamlit-login-auth-ui==0.2.0
-streamlit-lottie==0.0.5
 streamlit-option-menu==0.3.12
 tenacity==8.2.3
 toml==0.10.2
-toolz==0.12.0
+toolz==0.12.1
 tornado==6.4
-trycourier==5.0.0
 typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
-urllib3==2.1.0
+urllib3==2.2.0
 validators==0.22.0
 watchdog==3.0.0
 zipp==3.17.0
